Fix - logo visible at AboutUs/AboutJukids mobile view. Fix - Home section titles color orange. Fix - translation correction.

--- a/cd2024bfs3g1-frontend/src/main/ngx/src/app/about/about-us/about-us.component.scss
+++ b/cd2024bfs3g1-frontend/src/main/ngx/src/app/about/about-us/about-us.component.scss
@@ -17,10 +17,6 @@
     display: flex;
     gap: 1rem;
     align-items: center;
-  
-    @media screen and (max-width: 760px) {
-      display: none;
-    }
   }
 
   .title {
